# recipe-api

./: Dockerfile  README.md  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: main.yml
app/: .flake8
app/app/: settings.py  urls.py
app/core/: admin.py  apps.py  models.py
app/core/management/commands/: add_ingredients.py  wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_recipe.py  0003_auto_20250418_1748.py  0004_auto_20250420_1632.py  0005_recipe_image.py  0006_auto_20250505_2008.py  0007_ingredient_amount.py  0008_auto_20250514_1450.py  0009_auto_20250514_1451.py  0010_remove_recipe_ingredients.py  0011_recipe_ingredients.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
app/recipe/: filters.py  serializers.py  urls.py  views.py
app/recipe/tests/: test_ingredient_api.py  test_recipe_api.py  test_tags_api.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
nginx/: Dockerfile  index.html  nginx.conf
proxy/: Dockerfile
scripts/: run.sh
